Add Twitter timeline

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,9 @@
         {% unless posts_total == 0 %}
           {% include thoughts.html %}
         {% endunless %}
+
+        <a class="twitter-timeline" data-width="500" href="https://twitter.com/AntonIPetrov?ref_src=twsrc%5Etfw">Tweets by AntonIPetrov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
       </div>
     </div>
   </div>
