--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -50,5 +50,6 @@
     {% if user.hireable %}
       <span title="Hire me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">Available for hire</span>
     {% endif %}
+    <a style="font-weight:bold;" href="http://bit.ly/anton-petrov-cv-pdf" target="_blank">Download CV</a>
   </div>
 {% endif %}
