--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@
           {% include thoughts.html %}
         {% endunless %}
 
-        <a class="twitter-timeline" data-width="500" href="https://twitter.com/AntonIPetrov?ref_src=twsrc%5Etfw">Tweets by AntonIPetrov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-width="500" data-height="1000" href="https://twitter.com/AntonIPetrov?ref_src=twsrc%5Etfw">Tweets by AntonIPetrov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
       </div>
     </div>
